# item_rec

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
conf/: config.yaml
item_rec/: metrics.py  models.py  preprocess.py  utils.py
notebooks/: experiments.ipynb
