[tool.poetry]
name = "item-rec"
version = "0.0.1"
description = ""
authors = ["BabkenBrs <brsikyanbabken99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pandas = "^2.1.2"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
implicit = "^0.7.2"
datasets = "^2.14.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^3.0.2"
black = "^23.10.1"
ipykernel = "^6.26.0"
hydra-core = "^1.3.2"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.master]
disable = [
    "attribute-defined-outside-init",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = "py310"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "D",   # pydocstyle
    "I",   # isort
    "PL",  # pylint
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "PT",  # flake8-pytest-style
]
ignore = [
    "RUF001",  # ambiguous cyrillic letters
    "RUF002",  # ambiguous cyrillic letters
    "D417",
    "PLR2004",
]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
